# rust-os

./: .gitignore  Cargo.toml  Readme.MD
.cargo/: config
src/: main.rs  vga_buffer.rs
